# diser_backward_cpp

./: CMakeLists.txt  CMakeSettings.json
src/: approx_orto.cpp  approx_orto.h  main.cpp  managers.cpp  managers.h  stable_data_structs.h  statistics.cpp  statistics.h
